WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44056
[GTK] GSettings support adds annoying warnings on systems with older glib versions
https://bugs.webkit.org/show_bug.cgi?id=44056
Summary
[GTK] GSettings support adds annoying warnings on systems with older glib ver...
Gustavo Noronha (kov)
Reported
2010-08-16 07:23:53 PDT
I would just commit this patch, but thought it might be a better idea to use the EWS as a try bot instead of spending more time building an environment to test it against.
Attachments
proposed fix
(8.00 KB, patch)
2010-08-16 07:24 PDT
,
Gustavo Noronha (kov)
mrobinson
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gustavo Noronha (kov)
Comment 1
2010-08-16 07:24:22 PDT
Created
attachment 64493
[details]
proposed fix
Martin Robinson
Comment 2
2010-08-16 09:04:29 PDT
Comment on
attachment 64493
[details]
proposed fix I'm not sure if this review is necessary, but the EWS is green so LGTM!
Gustavo Noronha (kov)
Comment 3
2010-08-16 09:54:26 PDT
Comment on
attachment 64493
[details]
proposed fix \o/
WebKit Commit Bot
Comment 4
2010-08-16 11:44:12 PDT
Comment on
attachment 64493
[details]
proposed fix Rejecting patch 64493 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Martin Robinson', u'--force']" exit_code: 2 Last 500 characters of output: ChangeLog patching file WebKit/gtk/ChangeLog patching file WebKit/gtk/WebCoreSupport/InspectorClientGtk.cpp patching file WebKit/gtk/webkit/webkitprivate.cpp patching file WebKit/gtk/webkit/webkitprivate.h patching file autotools/gsettings.m4 The following paths are ignored by one of your .gitignore files: autotools Use -f if you really want to add them. fatal: no files added Failed to git add autotools/gsettings.m4. at /Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply line 427. Full output:
http://queues.webkit.org/results/3718273
Gustavo Noronha (kov)
Comment 5
2010-08-17 05:59:17 PDT
(In reply to
comment #4
)
> patching file autotools/gsettings.m4 > The following paths are ignored by one of your .gitignore files: > autotools > Use -f if you really want to add them. > fatal: no files added > Failed to git add autotools/gsettings.m4. at /Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply line 427. > > Full output:
http://queues.webkit.org/results/3718273
That's because .gitignore is casting the net too wide (ignoring the whole autotools directory). I'll make it more selective so this doesn't happen again =).
Gustavo Noronha (kov)
Comment 6
2010-08-17 06:10:27 PDT
Landed as
r65498
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug