2010-08-17  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

Reviewed by Martin Robinson.

        [GTK] GSettings support adds annoying warnings on systems with older glib versions
        https://bugs.webkit.org/show_bug.cgi?id=44056

        Add file containing GLIB_GSETTINGS macro so that
        configure doesn't spit warnings in older systems.

        * autotools/gsettings.m4: Added.
        * .gitignore: Ignore files that are generated inside autotools
        explicitely, because we have some that are kept in version
        control.

WebKit/gtk

2010-08-17  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Martin Robinson.

        [GTK] GSettings support adds annoying warnings on systems with older glib versions
        https://bugs.webkit.org/show_bug.cgi?id=44056

        Use #ifdef instead of #if for HAVE_GSETTINGS to avoid warnings
        when it is not defined.

        * WebCoreSupport/InspectorClientGtk.cpp:
        * webkit/webkitprivate.cpp:
        (webkit_init):
        * webkit/webkitprivate.h:

Canonical link: https://commits.webkit.org/56298@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65498 268f45cc-cd09-0410-ab3c-d52691b4dbfc