WebKit/gtk/webkit/webkitprivate.h
@@ -120,7 +120,7 @@ namespace WebKit {
 extern "C" {
     void webkit_init();
 
-#if HAVE_GSETTINGS
+#ifdef HAVE_GSETTINGS
     GSettings* inspectorGSettings();
 #endif
 
